--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Cocos2d-html5 Hello World test</title>
+    <title>BeatNova2</title>
     <link rel="icon" type="image/GIF" href="res/favicon.ico"/>
 
     <meta name="viewport"
@@ -28,6 +28,7 @@
     <!-- force screen orientation on some browser -->
     <!-- <meta name="screen-orientation" content="portrait"/>
     <meta name="x5-orientation" content="portrait"> -->
+    <meta name="description" content="html5,webaudioapi,javascript" />
 
     <meta name="browsermode" content="application">
     <meta name="x5-page-mode" content="app">
